--- a/templates/index.html
+++ b/templates/index.html
@@ -78,7 +78,7 @@
 
 <body>
 
-  <h1> HTMX + Rust = crappy todo app</h1>
+  <h1> HTMX + Rust + SQLite = crappy todo app</h1>
   
   <form id="todo-form" hx-post="/todo" hx-target="#todos" hx-swap="outerHtml" 
         onsubmit="setTimeout(() => {
