--- a/templates/index.html
+++ b/templates/index.html
@@ -1,96 +1,42 @@
 <!DOCTYPE html>
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="color-scheme" content="light dark">
   <title>Todo</title>
 
   <!-- HTMX Import -->
   <script src="https://unpkg.com/htmx.org@1.9.2"></script>
+
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css" >
 </head>
 
 <style>
-  * {
-    margin: 0;
-    padding: 0;
-  }
-
-  body {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    gap: 10px;
-    height: 100vh;
-  }
-
-  button {
-    width: 20%;
-    margin: 2px;
-  }
-
-  button:hover {
-    cursor: pointer;
-    border: 2px solid #000000;
-    margin: 0;
-    padding: 5px;
-  }
-
-  ul {
-    list-style: none;
-    display: flex;
-    flex-direction: column;
-    gap: 5px;
-    width: 50%;
-  }
-
-  .complete {
-    background-color: mediumseagreen;
-    color: white;
-    border: none;
-    border-radius: 10px;
-    padding: 5px;
-  }
-
-  li {
-    display: flex;
-    justify-content: space-between;
-  }
-
-  form {
-    display: flex;
-    width: 50%
-    justify-content: space-between;
-
-    button {
-      padding: 5px;
-      border: none;
-      border-radius: 10px;
-      background-color: #007bff;
-      color: white;
-    }
-
-    input {
-      padding: 5px;
-      border: 1px solid #adadad;
-      border-radius: 10px;
-      width: 80%;
-    }
+  <!-- Fade out deleted row -->
+  tr.htmx-swapping td {
+    opacity: 0;
+    transition: opacity 1s ease-out;
   }
 </style>
 
 <body>
+  <main class="container">
 
   <h1> HTMX + Rust + SQLite = crappy todo app</h1>
   
-  <form id="todo-form" hx-post="/todo" hx-target="#todos" hx-swap="outerHtml" 
+  <form id="todo-form" hx-post="/todo" hx-target="#todos" hx-swap="beforeend" 
         onsubmit="setTimeout(() => {
           this.reset();
         }, 1);"
   >
     <input type="text" required="true" name="text" placeholder="Todo"/>
-    <button type="submit">Add</button>
   </form>
 
-  <ul id="todos" hx-get="/todo" hx-trigger="load" hx-swap="innerHtml">
-  </ul>
+  <table class="todo-table">
+    <tbody id="todos" hx-get="/todo" hx-target="#todos" hx-trigger="load" hx-swap="outerHtml swap:0.5s">
+    </tbody>
+  </table>
 
+  </main>
 </body>
 </html>
