--- a/templates/index.html
+++ b/templates/index.html
@@ -20,11 +20,18 @@
 
   table {
       margin-left: 0; /* Aligns the table to the left side of the container */
+      width: 100%;
+      table-layout: fixed;
   }
 
-  th, td:first-child, th:first-child, td:nth-child(2), th:nth-child(2) {
-      width: 5%; /* Allows the first two columns to size based on their content */
-      white-space: nowrap; /* Prevents wrapping of text in the first two columns */
+  th, td:first-child, th:first-child {
+      width: 80%; /* Allows the first two columns to size based on their content */
+      white-space: normal; /* Prevents wrapping of text in the first two columns */
+  }
+
+  .small-button {
+    padding: 0.3rem 0.6rem;
+    font-size: 0.8rem;
   }
 
   .completed {
