--- a/templates/todos-complete.html
+++ b/templates/todos-complete.html
@@ -24,14 +24,12 @@
     </td>
     <td>
       <button 
-        class="trash-button"
+        class="outline secondary small-button"
         hx-delete="/todo/{{todo.id}}" 
         hx-target="closest tr" 
         hx-swap="outerHtml" 
       >
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24">
-            <path d="M3 6h18v2H3V6zm2-2h14v2H5V4zm3 4v12a2 2 0 0 0 2 2h4a2 2 0 0 0 2-2V8H8zm2 2h4v10h-4V10z"/>
-        </svg>
+      🗑️
     </button>
   </td>
 </tr>
