--- a/templates/create_list.html
+++ b/templates/create_list.html
@@ -5,7 +5,7 @@
         this.reset();
       }, 1);"
 >
-<input type="text" required="true" name="text" placeholder="Add new todo list"/>
+<input type="text" required="true" name="name" placeholder="Add new todo list"/>
 </form>
 
 
