Minor design changes

--- a/templates/index.html
+++ b/templates/index.html
@@ -24,12 +24,12 @@
       table-layout: fixed;
   }
 
-  th, td:first-child, th:first-child {
+  td:first-child, th:first-child {
       max-width: 99%; /* Allows the first two columns to size based on their content */
       white-space: normal; /* Prevents wrapping of text in the first two columns */
   }
 
-  th, td:nth-child(2), th:nth-child(2) {
+  td:nth-child(2), th:nth-child(2) {
       width: 50px; /* Allows the first two columns to size based on their content */
       white-space: nowrap; /* Prevents wrapping of text in the first two columns */
   }
