--- a/templates/tasks-complete.html
+++ b/templates/tasks-complete.html
@@ -2,7 +2,7 @@
   {%if task.completed %}
   hx-swap-oob="beforebegin:#completed"
   {% else %}
-  hx-swap-oob="beforeend:#tasks"
+  hx-swap-oob="beforebegin:#tasks"
   {% endif %}
   >
   <tr 
