--- a/templates/list_tables.html
+++ b/templates/list_tables.html
@@ -1,4 +1,4 @@
-<form id="task-form" hx-post="/{{list.id}}/task" hx-target="#tasks" hx-swap="beforeend" 
+<form id="task-form" hx-post="/{{list.id}}/task" hx-target="#tasks" hx-swap="beforebegin" 
       onsubmit="setTimeout(() => {
         this.reset();
       }, 1);"
