--- a/templates/select_list.html
+++ b/templates/select_list.html
@@ -1,6 +1,6 @@
 {%for list in lists %}
 <option class="select-list" value={{list.id}}
-  {% if loop.index == 0 %} selected="selected" {% endif %}
+  {% if loop.index == selected_list %} selected="selected" {% endif %}
 >
 {{list.name}}
 </option>
