--- a/templates/create_list.html
+++ b/templates/create_list.html
@@ -6,11 +6,11 @@
       }, 1);"
 >
 <label>List name</label>
-<input type="text" required="true" name="name" placeholder="Add new todo list"/>
+<input type="text" required name="name" placeholder="Add new todo list"/>
 <label>[Optional] Grocy URL</label>
-<input type="text" required="false" name="grocy_url" placeholder="https://grocy.example.com"/>
+<input type="text" name="grocy_url" placeholder="https://grocy.example.com"/>
 <label>[Optional] Grocy API key</label>
-<input type="text" required="false" name="grocy_api_key" placeholder="HSHNaMMG6JmrTXa836FSQeVq79pDTm866eKFXh4f"/>
+<input type="text" name="grocy_api_key" placeholder="HSHNaMMG6JmrTXa836FSQeVq79pDTm866eKFXh4f"/>
 <input type="submit">Submit</input>
 </form>
 
