--- a/templates/index.html
+++ b/templates/index.html
@@ -82,7 +82,7 @@
   </div>
   </form>
 
-  <form id="task-form" hx-post="/{{selected_list}}/task" hx-target="#taskstablebody" hx-swap="afterbegin" 
+  <form id="task-form" hx-post="/{{selected_list}}/task" hx-target="#tasktablebody" hx-swap="afterbegin" 
         onsubmit="setTimeout(() => {
           this.reset();
         }, 1);"
