Vendor PicoCSS and HTMX

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,9 +7,8 @@
   <title>Todo</title>
 
   <!-- HTMX Import -->
-  <script src="https://unpkg.com/htmx.org@2.0.4"></script>
-
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css" >
+  <script src="./vendor/htmx.js"></script>
+  <link rel="stylesheet" href="./vendor/pico.min.css" >
 </head>
 
 <style>
