Add list creation and deletion

--- a/templates/index.html
+++ b/templates/index.html
@@ -55,7 +55,7 @@
     </ul>
     <ul>
       <li><a href="/">Home</a></li>
-      <li><button class="outline" hx-get="/create_list" hx-target="#mainbody">Create</button></li>
+      <li><a href="/manage?list_id={{selected_list}}">Manage</a></li>
       <li><a href="/about">About</a></li>
     </ul>
     <nav>
