--- a/templates/manage.html
+++ b/templates/manage.html
@@ -20,6 +20,8 @@
     <ul>
       <li><a href="/">Home</a></li>
       <li><button class="outline" hx-get="/manage" hx-target="#mainbody">Manage</button></li>
+      <li><a href="/recipes">Recipes</a></li>
+      <li><a href="/meal-plan">Meal Plan</a></li>
       <li><a href="/about">About</a></li>
     </ul>
     <nav>
