--- a/templates/index.html
+++ b/templates/index.html
@@ -172,19 +172,18 @@
   <header class="container">
     <nav>
     <ul>
-      <li>HTMX + Rust + SQLite = crappy todo app</li>
-    </ul>
-    <ul>
       <li><a href="/">Home</a></li>
       <li><a href="/manage?list_id={{selected_list}}">Manage</a></li>
       <li><a href="/recipes">Recipes</a></li>
       <li><a href="/meal-plan">Meal Plan</a></li>
       <li><a href="/about">About</a></li>
     </ul>
-    <nav>
+    </nav>
   </header>
 
   <main class="container" id="mainbody">
+  
+  <h1>HTMX + Rust + SQLite = crappy todo app</h1>
 
   <form>
     <div id="list_options">
