--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -130,16 +130,13 @@
   <header class="container">
     <nav>
     <ul>
-      <li>HTMX + Rust + SQLite = crappy todo app</li>
-    </ul>
-    <ul>
       <li><a href="/">Home</a></li>
       <li><a href="/manage">Manage</a></li>
       <li><a href="/recipes">Recipes</a></li>
       <li><a href="/meal-plan">Meal Plan</a></li>
       <li><a href="/about">About</a></li>
     </ul>
-    <nav>
+    </nav>
   </header>
 
   <main class="container">
