--- a/templates/meal_plan.html
+++ b/templates/meal_plan.html
@@ -133,12 +133,14 @@
   </header>
 
   <main class="container">
+    <h1>Meal Plan</h1>
+    
     <div class="week-navigation">
       <a href="/meal-plan?week={{ prev_week }}" role="button" class="outline">← Previous Week</a>
       
-      <h1 class="week-title">
+      <h2 class="week-title week-info">
         Week of {{ start_date }}
-      </h1>
+      </h2>
       
       <a href="/meal-plan?week={{ next_week }}" role="button" class="outline">Next Week →</a>
     </div>
